kubernetes/core/cloudnative-pg/operator/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudnative-pg
  labels:
    pod-security.kubernetes.io/enforce: restricted
