kubernetes/core/cloudnative-pg/operator/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cloudnative-pg
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# operator: manages Cluster CRs, webhook, instance monitoring
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: operator
  namespace: cloudnative-pg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/podRole: instance
            io.kubernetes.pod.namespace: pocket-id
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/podRole: instance
            io.kubernetes.pod.namespace: forgejo
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plugin-barman-cloud
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
---
# plugin-barman-cloud: backup coordinator, receives requests from operator
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plugin-barman-cloud
  namespace: cloudnative-pg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plugin-barman-cloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.oraclecloud.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
